5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1575_1332.log
== TEST (2019-03-12 12:41:13) 
-- CODE:
aresta 5phdhd
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta 5phdhd
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:59:48) 
-- CODE:
aresta = 5
 area= 3/2*3**0.5*aresta**2
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area= 3/2*3**0.5*aresta**2
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:06:00) 
-- CODE:
aresta = 5
 area= 3/2*(3**0.5*aresta**2
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area= 3/2*(3**0.5*aresta**2
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:06:37) 
-- CODE:
aresta = 5
 area= (3/2)*(3**0.5*aresta**2
print(round(area, 4))
-- EXECUTION TIME:
0.152352
-- ERROR:
  File "/home/codebench/codes/1575/1332/main.py", line 2
    area= (3/2)*(3**0.5*aresta**2
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:06:42) 
-- CODE:
aresta = 5
 area= (3/2)*(3**0.5*aresta**2
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area= (3/2)*(3**0.5*aresta**2
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:07:06) 
-- CODE:
aresta = 5
 area= (3/2)*(3**0.5*aresta**2
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area= (3/2)*(3**0.5*aresta**2
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:07:31) 
-- CODE:
aresta = 5
 area= (3/2)*(3**0.5*aresta**2
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area= (3/2)*(3**0.5*aresta**2
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:07:42) 
-- CODE:
aresta = 5
area= (3/2)*(3**0.5*aresta**2
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:07:56) 
-- CODE:
aresta = 5
area= (3/2)*(3**0.5*aresta**2
				 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:08:00) 
-- CODE:
aresta = 5
area= (3/2)*(3**0.5*aresta**2
				 
print(round(area, 4))
-- EXECUTION TIME:
0.154139
-- ERROR:
  File "/home/codebench/codes/1575/1332/main.py", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:09:54) 
-- CODE:
aresta = (5)
area= (3/2)*(3**0.5)*aresta**2
				 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:11:04) 
-- CODE:
aresta = (5)
area= (3/2)*(3**0.5)*aresta**2
				 
print(round(area, 4))
-- EXECUTION TIME:
0.145867
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
